<resources>
    <string name="app_name">Caronas</string>
    <string name="ride">Caronas</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="register">Cadastre-se</string>
    <string name="register2">Cadastrar</string>
    <string name="phone">Telefone</string>
    <string name="name">Nome</string>
    <string name="profile_image">Profile Image</string>
    <string name="title_activity_home">Home</string>
    <string name="title_rides">Minhas caronas</string>
    <string name="title_offers">Ofertas</string>
    <string name="title_requests">Pedidos</string>
    <string name="from">De:</string>
    <string name="to">Para:</string>
    <string name="to_time">às</string>
    <string name="call">Ligar</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="vacancies">Vagas:</string>
    <string name="add_vacancy">+1 Vaga</string>
    <string name="remove_vacancy">-1 Vaga</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Add</string>
    <string name="create_new_ride">Criar nova carona</string>
    <string name="offer">Oferta</string>
    <string name="request">Pedido</string>
    <string name="choose_data_time">Escolha a data e o horário da carona</string>
    <string name="date">Data</string>
    <string name="time">Hora</string>
    <string name="origin_destination">Qual a origem e destino da carona?</string>
    <string name="origin">Ex: Cidade, Bairro, Rua</string>
    <string name="destination">Ex: Cidade, Bairro, Rua</string>
    <string name="contact">Contato</string>
    <string name="vacancies_number">Número de vagas:</string>
    <string name="originHint">Escolha a origem</string>
    <string name="destinationHint">Escolha o destino</string>
</resources>