<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.creation.CreationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/create_new_ride"
                android:textColor="@color/purple_500"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroupCreation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="64dp">

                <RadioButton
                    android:id="@+id/radioButtonOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/offer" />

                <RadioButton
                    android:id="@+id/radioButtonRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/request" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/choose_data_time"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewDateCreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="none"
                android:textSize="20sp"
                tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTime1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="none"
                    android:textSize="20sp"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_time" />

                <TextView
                    android:id="@+id/textViewTime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="none"
                    android:textSize="20sp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/origin_destination"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:inputType="none"
                android:text="@string/originHint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:inputType="none"
                android:text="@string/destinationHint"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextOriginCreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:ems="10"
                android:hint="@string/origin"
                android:inputType=""
                android:visibility="gone"
                tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editTextDestinationCreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:ems="10"
                android:hint="@string/destination"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/contact"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPhoneCreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

            <LinearLayout
                android:id="@+id/linearVacancies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:text="@string/vacancies_number" />

                <EditText
                    android:id="@+id/editTextVacanciesCreation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="Autofill,SpeakableTextPresentCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonConfirmCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:onClick="handleRideRegister"
                android:text="@string/register2"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>