<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#EAEAEA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textColor="@color/purple_700" />

                <TextView
                    android:id="@+id/textViewRequestFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="15sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:text="@string/to"

                    android:textColor="@color/purple_700" />

                <TextView
                    android:id="@+id/textViewRequestTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="15sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRequestDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/textViewRequestTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/to_time"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewRequestTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRequestUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    tools:ignore="NestedWeights" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/buttonRequestFav"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="12sp"
                    app:icon="@android:drawable/star_off"
                    app:iconSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonRequestCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/call"
                    android:textSize="12sp"
                    app:iconSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonRequestWhatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/whatsapp"
                    android:textSize="12sp"
                    app:backgroundTint="#009688"
                    app:iconSize="24sp"
                    app:rippleColor="#FFFFFF"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>